@@ -1,3 +1,9 @@
+2001-01-28  Bruno Haible  <haible@clisp.cons.org>
+
+        * foreign.d (convert_function_to_foreign, free_foreign_callin,
+           convert_function_from_foreign, callback): Add cast, to avoid
+          warning on 64-bit machines.
+
 2001-01-17  Bruno Haible  <haible@clisp.cons.org>
 
         * spvw.d (main): Restore functionality broken by last patch.
